# cong_nghe_phan_mem

be_app/: .gitignore  pyproject.toml
be_app/app/: main.py  routers.py
be_app/app/api/endpoint/: novel.py
be_app/app/core/: settings.py
be_app/app/db/: database.py
be_app/app/models/: base.py  chapter.py  gener.py  gener_data.py  image.py  image_data.py  manga.py  user.py
fe_app/: package-lock.json  package.json
