[tool.poetry]
name = "be-doc-truyen"
version = "0.1.0"
description = "doc-truyen-chu"
authors = ["vietGym <vietgym007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.23.2"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.5"
fastapi-utils = "^0.2.1"
alembic = "^1.7.6"
python-dotenv = "^0.19.2"
pytz = "^2022.1"
pycryptodome = "^3.15.0"
Pyrebase = "3.0.1"
PyJWT = "1.7.1"
schedule = "^1.1.0"
tldextract = "^3.4.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
pusher = "^3.3.2"
leveldb = "^0.201"
python-multipart = "^0.0.6"
jinja2 = "3.0.3"
aiofiles = "^23.1.0"
pillow = "^9.5.0"
pydot ="^1.4.2"
graphviz="^0.20.1"
opencv-python="^4.8.0.74"
pandas="^2.0.3"
httpx="^0.24.1"
gunicorn = "^21.2.0"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
xmltodict = "^0.13.0"
[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
